--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.32.0
-pandas==2.1.0
-numpy==1.26.4
-plotly==5.18.0
-openpyxl==3.1.2
+streamlit>=1.28.0,<1.33.0
+pandas>=2.0.0,<2.2.0
+numpy>=1.24.0,<1.27.0
+plotly>=5.15.0,<5.20.0
+openpyxl>=3.1.0,<3.2.0
